--- a/Photo-Genius/react-app/src/components/SplashPage/SplashPage.css
+++ b/Photo-Genius/react-app/src/components/SplashPage/SplashPage.css
@@ -73,9 +73,13 @@ margin-right: 30px;
 }
 
 .splashpage {
+    display: flex;
+    /* justify-content: center; */
 width: 100%;
-height: 100vh;
+height: 100%;
 object-fit: cover;
+align-items: center;
+/* overflow: hidden; */
 
 }
 
@@ -86,17 +90,50 @@ height: 100vh;
 object-fit: cover;
 
 }
-
+.text-wrapper {
+position: absolute;
+margin: 0 auto;
+/* bottom: 30; */
+max-width: 600px;
+left: 0;
+right: 0;
+/* bottom: 0; */
+color: rgb(255, 255, 255);
+/* text-align: center; */
+margin-bottom: 60px;
+}
 .splash-welcome {
+font-size: 60px;
+font-weight: 500;
+margin-bottom: 40px;
+/* margin-left: 20px; */
 
 
 }
 .splash-text {
-
-
+margin-top: 30px;
+font-size: 30px;
+font-weight: 500;
+color: white;
+/* max-width: 700px; */
+position: relative;
+right: 20px;
 }
 
 .start-for-free {
-
+background-color: white;
+color: black;
+cursor: pointer;
+font-size: 25px;
+height: 60px;
+line-height: 64px;
+max-width: 200px;
+width: 100%;
+border-radius: 5px;
+margin-left: auto;
+margin-right: auto;
+display: flex;
+justify-content: center;
+margin-top: 40px;
 
 }
