--- a/Photo-Genius/react-app/src/components/SplashPage/SplashPage.css
+++ b/Photo-Genius/react-app/src/components/SplashPage/SplashPage.css
@@ -1,6 +1,11 @@
+html,body{
+    margin:0
+}
 .splashpage-wrapper {
+    position: relative;
 /* max-width: 100%; */
-/* justify-content: center; */
+justify-content: center;
+/* height: 100vh; */
 
 
 }
@@ -9,25 +14,28 @@
 /* position: absolute; */
 display: flex;
 align-self: center;
-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
 font-size: 30px;
-font-weight: 999;
-margin-left: 5px;
+/* font-weight: 999; */
+margin-left: 8px;
 }
 .splash-top-left{
-    margin-left: 20px;
+    margin-left: 30px;
+    margin-bottom: 8px;
 }
 .splash-logo-header {
     margin-top: 10px;
+    margin-left: 10px;
 display: flex;
 align-items: center;
 cursor: pointer;
 
 }
 .photo-genius-logo1 {
-color: rgb(0, 0, 0);
+color: rgb(98, 0, 255);
 font-size: 40px;
 border-radius: 50%;
+margin-left: 5px;
 
 }
 .photo-genius-logo2 {
@@ -36,58 +44,62 @@ border-radius: 50%;
     border-radius: 50%;
 
 }
+img{
+    height: 100vh;
+}
 .splash-nav{
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
+    align-items: center;
     width: 100%;
     height: 70px;
-    background-color: rgba(0,0,0,.25);
+    background: rgba(0, 0, 0, 0.253);
+    margin: 0px;
+    /* z-index: 1; */
+    overflow: hidden;
+    position: fixed;
 
 
 }
 .logins{
     justify-content: space-between;
-    margin-right: 50px;
+    margin-right: 100px;
     display: flex;
     align-items: center;
+    color: white
 }
-.splash-login-new{
 
-
-}
 .splash-login {
 /* position: relative;
 left: 30px */
 margin-right: 30px;
+cursor: pointer;
 
 }
-.photo-genius-logo {
-
-
-}
-.search-bar {
-
-
-
+.splash-login-new{
+    margin-left: 10px;
+    cursor: pointer;
 }
 
 .splashpage {
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
 width: 100%;
 height: 100%;
 object-fit: cover;
 align-items: center;
-/* overflow: hidden; */
-
+/* overflow:hidden; */
+margin:0px
 }
 
 .splashpage-image {
+    /* position: absolute; */
+    /* z-index: 999; */
 width: 100%;
 height: 100vh;
-/* object-fit: contain; */
+/* height: 100%; */
 object-fit: cover;
+
 
 }
 .text-wrapper {
