--- a/Photo-Genius/react-app/src/components/Nav/NavBar.css
+++ b/Photo-Genius/react-app/src/components/Nav/NavBar.css
@@ -44,6 +44,7 @@ border-radius: 50%;
 }
 .fa-camera{
 color: rgb(255, 255, 255);
+cursor: pointer;
 
 }
 .upload-logout{
@@ -53,11 +54,15 @@ color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
     color: white;
+    /* cursor: pointer; */
 }
 .logout{
-margin-right: 10px
+margin-right: 10px;
+cursor: pointer
 
-
+}
+.upload{
+    cursor: pointer;
 }
 .splash-login {
 /* position: relative;
