--- a/react-app/src/components/Nav/NavBar.css
+++ b/react-app/src/components/Nav/NavBar.css
@@ -50,7 +50,7 @@ cursor: pointer;
 .upload-logout{
     /* justify-content: space-around; */
     gap:30px;
-    margin-right: 50px;
+    margin-right: 100px;
     display: flex;
     align-items: center;
     color: white;
@@ -58,15 +58,27 @@ cursor: pointer;
 }
 .logout{
 margin-right: 10px;
-cursor: pointer
+cursor: pointer;
+font-size: 22px;
 
 }
 .upload{
     cursor: pointer;
+    font-size: 22px;
 }
 .splash-login {
 /* position: relative;
 left: 30px */
 margin-right: 30px;
 
+}
+
+.explore{
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 22px;
+    position: relative;
+    top: 3px;
+    left:55px
 }
