--- a/react-app/src/components/Image/ImageCSS/ImageCard.css
+++ b/react-app/src/components/Image/ImageCSS/ImageCard.css
@@ -19,11 +19,73 @@ margin-right: 20px; */
     height: auto;
     object-fit: cover;
     flex-direction: column;
-    gap: 0
+    gap: 2px;
+    border: 2px solid white;
+    cursor: pointer;
+    /* border: 2px solid red; */
     /* flex-direction: row; */
 
 }
-.images{}
+
+
+
+
+.images{
+    position: absolute;
+    color: white;
+    /* border: 2px solid black; */
+    left: 8px;
+    bottom: 10px;
+    /* display: flex; */
+    width: 100%;
+    height: 30px;
+    cursor: pointer;
+    display: none;
+    /* opacity: .7; */
+    animation-name: slide;
+    animation-duration: 1s
+    /* border: 2px solid black; */
+
+    /* visibility: hidden */
+    /* flex-direction: column; */
+
+}
+.image-card:hover + .images{
+display: block;
+box-sizing: initial;
+position: absolute;
+}
+
+.images:hover{
+    display: block;
+}
+
+.images-comments{
+    /* display: block; */
+    position: relative;
+    color: rgb(255, 255, 255);
+    /* border: 2px solid black; */
+    display:flex;
+    justify-content: flex-end;
+    /* border: 2px solid black; */
+    /* display: flex; */
+    /* width: 100px;
+    height: 30px; */
+    cursor: pointer;
+    /* border: 2px solid red; */
+    width: 93%;
+    gap: 5px;
+    /* opacity: .7; */
+    /* display: none; */
+
+    bottom: 25px;
+}
+
+@keyframes slide {
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+}
+
 
 .image-title {
 
