--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -104,20 +104,28 @@ object-fit: cover;
 }
 .text-wrapper {
 position: absolute;
-margin: 0 auto;
+margin-left: auto;
+margin-right: auto;
 /* bottom: 30; */
-max-width: 600px;
-left: 0;
-right: 0;
+max-width: 820px;
+width:80%;
+height: 600px;
+/* left: 0; */
+/* right: 0; */
 /* bottom: 0; */
 color: rgb(255, 255, 255);
+/* border: 2px solid red; */
 /* text-align: center; */
-margin-bottom: 60px;
+margin-top: 230px;
 }
 .splash-welcome {
+position: relative;
 font-size: 60px;
 font-weight: 500;
-margin-bottom: 40px;
+margin-bottom: 20px;
+left: 150px;
+/* margin-left: auto; */
+/* margin-right: auto; */
 /* margin-left: 20px; */
 
 
@@ -129,7 +137,21 @@ font-weight: 500;
 color: white;
 /* max-width: 700px; */
 position: relative;
-right: 20px;
+
+top: 20px;
+left: 45px;
+margin-left: auto;
+margin-right: auto;
+}
+.splash-text-pt2{
+margin-top: 30px;
+font-size: 30px;
+font-weight: 500;
+color: white;
+/* max-width: 700px; */
+position: relative;
+left: 250px;
+bottom: 10px;
 }
 
 .start-for-free {
@@ -146,6 +168,6 @@ margin-left: auto;
 margin-right: auto;
 display: flex;
 justify-content: center;
-margin-top: 40px;
+margin-top: 50px;
 
 }
