--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -64,7 +64,7 @@ body, html {
     font-size: 22px;
     font-weight: 500;
 }
-.email-input {
+.email-inputs {
     margin-top: 20px;
     display: flex;
     position: relative;
@@ -77,7 +77,7 @@ body, html {
 
 }
 
-.password-input {
+.password-inputs {
     margin-top: 10px;
     display: flex;
     position: relative;
@@ -89,7 +89,7 @@ body, html {
     border: 1px solid rgb(43, 41, 41);
 }
 
-.login-button {
+.login-buttons {
     display: flex;
     justify-content: center;
     /* width: 85%; */
@@ -105,7 +105,7 @@ body, html {
     border: none;
     cursor: pointer;
 }
-.demo{
+.demos{
     display: flex;
     justify-content: center;
     /* width: 85%; */
@@ -121,12 +121,12 @@ body, html {
     border: none;
     cursor: pointer;
 }
-.signup-wrapper {
+.bottom-cont {
     display: flex;
     justify-content: center;
     margin-top: 15px
 }
-.redirect{
+.redirects{
     margin-left: 5px;
     color:#128FDC;
     text-decoration: underline;
