--- a/react-app/src/components/Image/ImageCSS/ImageDetails.css
+++ b/react-app/src/components/Image/ImageCSS/ImageDetails.css
@@ -1,28 +1,98 @@
 .image-details-wrapper{
 display: flex;
 justify-content: center;
-background: rgb(19, 18, 18);
-height: 80vh
+background: rgb(27, 27, 27);
+height: 100%;
+width: 100%;
 }
 
+body,html {
+    margin: 0;
+    width: 100%
+}
 .image-detail{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
+    /* border: 2px solid yellow; */
+    /* display: flex;
+    justify-content: center; */
 
 }
-.image{
-max-width: 80%;
+.image-detail-image{
+max-width: 100%;
+width: 1000px;
+
+height: 667px;
 max-height: 80%;
 object-fit: cover;
+margin-left: auto;
+margin-right: auto;
+/* display: flex;
+justify-content: center; */
+border: 2px solid black;
+}
+.inner-content{
+    /* border: 2px solid green; */
+    position: fixed;
+    bottom: 217px;
+    /* top: 10; */
+
+    /* top: 0; */
+    right: 10px;
+    gap: 10;
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    /* width: 100%; */
+    /* display: flex; */
+    /* justify-content: flex-end; */
+    /* align-items: flex-end; */
 }
 
 .image-profile-details{
-
-
+color: white;
+width: 100%;
+/* display: flex; */
+/* justify-content: flex-end; */
+/* align-items: flex-end; */
+/* position: relative; */
+/* top: 650px; */
+/* bottom: 0; */
+/* border: 2px solid red; */
+/* position: relative; */
+/* left: 20px; */
+/* display: flex; */
+/* justify-content: center; */
+/* align-items: flex-end; */
+/* width: 100%; */
+/* flex-direction: column; */
+/* justify-content: space-between; */
+/* cursor: pointer; */
 }
+.fa-trash{
+    cursor: pointer;
+    font-size: 33px;
+    /* position: relative; */
+    /* margin-top: 570px; */
+    /* margin-right: 100px; */
+    /* display:;
+    align-content: flex-start; */
+    /* top: 302.5px;
+    left: 375px; */
+}
+.fa-pen-to-square {
+
+    cursor: pointer;
+    /* position: relative; */
+    font-size: 33px;
+    /* top: 335px; */
+    /* left: 285px; */
+    /* margin-left: 0px; */
+}
+
 .update-delete-wrapper{
 
 
@@ -41,8 +111,41 @@ object-fit: cover;
 }
 
 .below-image-wrapper{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid red;
+    /* width: 100%; */
+    flex-direction: column;
+    /* height: 100%; */
+    position: absolute;
+    /* left: 445px; */
+    /* margin-bottom: 20px; */
+}
+.user{
+    display: flex;
+    font-size: 20px;
+    size: 20px;
+    width: 45px;
+    height: 45px;
+    position: relative;
+    right: 0px;
 
 
+}
+.below-container {
+    position: absolute;
+    /* margin-top: 700px; */
+    width: 1000px;
+    /* height: 667px; */
+    top: 670px;
+    display: flex;
+    /* justify-content: flex-start;
+    align-items: flex-start; */
+    /* margin-bottom: 200px; */
+    margin-left: auto;
+    margin-right: auto;
+    /* border: 2px solid orange; */
 }
 
 .user-description{
@@ -50,33 +153,46 @@ object-fit: cover;
 
 }
 
-.user{
-
-
-}
 
 .user-name {
-
-
-}
-
-.image-title {
-
+font-size: 18px;
+position: relative;
+left: 10px;
+top: 15px;
 
 }
 
-.image-description {
+.image-detail-title {
+display: flex;
+justify-content: center;
+font-size: 18px;
+position: relative;
+top: 20px;
+right: 15px;
+}
+
+.image-detail-description {
+    /* display: flex; */
+    /* justify-content: center; */
+    font-size: 14px;
+    position: relative;
+    top: 40px;
+    right: 5px;
 
 
 }
 
 .views-faves-comments-wrapper {
 
-
+position: relative;
+left: 100px;
+top: 15px;
 }
 
 .comments-wrapper {
-
+position: relative;
+top: 150px;
+right: 340px;
 
 
 }
@@ -90,5 +206,5 @@ object-fit: cover;
 
 .comment-description {
 
-    
+
 }
