--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,10 @@
 /* TODO Add site wide styles */
+body {
+    font-family: "Frutiger"
+}
+
+@font-face {
+    font-family:"Frutiger";
+    src:local("Frutiger"),
+    url("./assets/Frutiger.ttf") format("truetype");
+}
