--- a/react-app/src/components/Image/ImageCSS/ImageDetails.css
+++ b/react-app/src/components/Image/ImageCSS/ImageDetails.css
@@ -114,7 +114,7 @@ width: 100%;
     display:flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     /* width: 100%; */
     flex-direction: column;
     /* height: 100%; */
