working on styling comments

--- a/react-app/src/components/Image/ImageCSS/ImageDetails.css
+++ b/react-app/src/components/Image/ImageCSS/ImageDetails.css
@@ -32,7 +32,7 @@ margin-left: auto;
 margin-right: auto;
 /* display: flex;
 justify-content: center; */
-border: 2px solid black;
+/* border: 2px solid black; */
 }
 .inner-content{
     /* border: 2px solid green; */
