--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -101,7 +101,7 @@ body, html {
     align-items: center;
     border-radius: 5px;
     color: white;
-    background-color:#128FDC;
+    background: linear-gradient(90deg, rgba(98,0,255,1) 0%, rgba(255,0,0,1) 100%);
     border: none;
     cursor: pointer;
 }
@@ -117,7 +117,7 @@ body, html {
     align-items: center;
     border-radius: 5px;
     color: white;
-    background-color:#128FDC;
+    background: linear-gradient(90deg, rgba(98,0,255,1) 0%, rgba(255,0,0,1) 100%);
     border: none;
     cursor: pointer;
 }
