--- a/react-app/src/components/auth/SignupForm.css
+++ b/react-app/src/components/auth/SignupForm.css
@@ -147,7 +147,7 @@ body, html {
     align-items: center;
     border-radius: 5px;
     color: white;
-    background-color:#128FDC;
+    background: linear-gradient(90deg, rgba(98,0,255,1) 0%, rgba(255,0,0,1) 100%);
     border: none;
     cursor: pointer;
 }
@@ -156,7 +156,8 @@ body, html {
 
     display: flex;
     justify-content: center;
-    margin-top: 20px
+    margin-top: 20px;
+    /* gap: 5px */
 }
 
 .errors-map {
@@ -165,4 +166,11 @@ body, html {
     left: 42px;
     top: 6px;
     color: red;
+}
+
+.redirect {
+    margin-left: 5px;
+    color:#128FDC;
+    text-decoration: underline;
+    cursor: pointer;
 }
