--- a/react-app/src/components/Image/ImageCSS/CreateImage.css
+++ b/react-app/src/components/Image/ImageCSS/CreateImage.css
@@ -91,7 +91,7 @@
     align-items: center;
     border-radius: 5px;
     color: white;
-    background-color:#128FDC;
+    background: linear-gradient(90deg, rgba(98,0,255,1) 0%, rgba(255,0,0,1) 100%);
     border: none;
     cursor: pointer;
 }
