--- a/react-app/src/components/Nav/NavBar.css
+++ b/react-app/src/components/Nav/NavBar.css
@@ -82,9 +82,26 @@ margin-right: 30px;
     display: flex;
     align-items: center;
     color: white;
-    font-size: 24px;
+    font-size: 26px;
     position: relative;
     top: 2.2px;
     left:30px
-    
+
+}
+
+
+.github2 {
+    position: relative;
+    right: 10px;
+    top: 1px;
+    cursor: pointer;
+    font-size: 22px;
+}
+
+.linkedin2{
+    position: relative;
+    left: 0px;
+    top: 1px;
+    cursor: pointer;
+    font-size: 22px;
 }
