--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -64,7 +64,7 @@ img{
 }
 .logins{
     justify-content: space-between;
-    margin-right: 100px;
+    margin-right: 150px;
     display: flex;
     align-items: center;
     color: white;
@@ -74,7 +74,7 @@ img{
 .splash-login {
 /* position: relative;
 left: 30px */
-margin-right: 30px;
+margin-right: 10px;
 cursor: pointer;
 
 }
@@ -172,5 +172,31 @@ display: flex;
 justify-content: center;
 align-items: center;
 margin-top: 50px;
+
+}
+
+.dev-info{
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+
+}
+.meet-the-dev{
+    display: flex;
+    align-items: center;
+    position: relative;
+    right: 20px;
+}
+
+.linkedin {
+position: relative;
+left: 15px;
+top: 2px
+}
+
+.github {
+position: relative;
+right: 5px;
+top: 2px;
 
 }
