--- a/react-app/src/components/Image/ImageCSS/CreateImage.css
+++ b/react-app/src/components/Image/ImageCSS/CreateImage.css
@@ -37,6 +37,7 @@
     position: relative;
     left: 30px;
     top: 6px;
+    font-size: 14px;
     color: red;
 }
 .image-url-input {
@@ -91,7 +92,7 @@
     align-items: center;
     border-radius: 5px;
     color: white;
-    background: linear-gradient(90deg, rgba(98,0,255,1) 0%, rgba(255,0,0,1) 100%);
+   background: linear-gradient(90deg, rgba(98,0,255,1) 0%, rgba(255,0,0,1) 100%);
     border: none;
     cursor: pointer;
 }
