fixed an issue with inconsistent erorr validations for signup form

--- a/react-app/src/components/Explore/ExplorePage.css
+++ b/react-app/src/components/Explore/ExplorePage.css
@@ -22,7 +22,7 @@ flex-wrap: wrap;
 box-sizing: content-box;
 width: 100%;
 gap: 0 5px;
-flex-grow: 1
+/* flex-grow: 1 */
 }
 
 .explore-images > * {
